Install PhpUnit as a dep

--- a/composer.json
+++ b/composer.json
@@ -39,7 +39,8 @@
         "symfony/templating": "~3.4|~4.0",
         "symfony/translation": "~4.2",
         "symfony/var-dumper": "^4.1.1",
-        "psr/cache": "~1.0"
+        "psr/cache": "~1.0",
+        "phpunit/phpunit": "^7.5"
     },
     "provide": {
         "psr/log-implementation": "1.0"
